--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "direto-boilerplate",
+  "name": "site-ebt",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -13,10 +13,14 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.5",
+    "@mui/lab": "6.0.0-beta.28",
     "@mui/material": "^6.4.5",
     "@mui/material-nextjs": "^6.4.3",
+    "@next/third-parties": "^15.1.7",
     "embla-carousel-react": "^8.5.2",
     "formik": "^2.4.6",
+    "framer-motion": "^12.4.7",
+    "lucide-react": "^0.476.0",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -24,11 +28,11 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@types/node": "^20.17.19",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "eslint": "^9.21.0",
     "eslint-config-next": "15.1.7",
-    "typescript": "^5"
+    "typescript": "^5.7.3"
   }
 }
