--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "embla-carousel-react": "^8.5.2",
     "formik": "^2.4.6",
     "framer-motion": "^12.4.7",
+    "html-react-parser": "^5.2.3",
     "motion": "^12.5.0",
     "next": "15.1.7",
     "react": "^19.0.0",
